# sqlmodelx

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: pytest.yml
sqlmodelx/: __init__.py  main.py  sqltypes.py
tests/: conftest.py  models.py  test_main.py  test_sqlalchemy.py
