[project]
name = "sqlmodelx"
version = "0.0.1"
description = "SQLModelX is an extension of the SQLModel library."
authors = [
    { name = "atomi", email = "1456417373@qq.com" },
]
dependencies = [
    "sqlmodel>=0.0.7",
]
requires-python = ">=3.7"
readme = "README.md"
license = { text = "MIT" }
keywords = [
    "sqlmodelx",
    "sqlmodel",
    "sqlalchemy",
    "fastapi",
    "fastapi-amis-admin",
]
classifiers = [
    "Framework :: FastAPI",
    "Environment :: Web Environment",
    "Topic :: System :: Systems Administration",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[project.urls]
-Source = "https://github.com/amisadmin/sqlmodelx"
FastAPI-Amis-Admin = "https://github.com/amisadmin/fastapi_amis_admin"

[project.optional-dependencies]
test = [
    "pytest>=7.1.3",
]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]