[project]
name = "sqlmodelx"
dynamic = ["version"]
description = "SQLModelX is an extension of the SQLModel library."
authors = [
    { name = "atomi", email = "1456417373@qq.com" },
]
dependencies = [
    "sqlmodel>=0.0.14",
]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }
keywords = [
    "sqlmodelx",
    "sqlmodel",
    "sqlalchemy",
    "fastapi",
    "fastapi-amis-admin",
]
classifiers = [
    "Framework :: FastAPI",
    "Environment :: Web Environment",
    "Topic :: System :: Systems Administration",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Source = "https://github.com/amisadmin/sqlmodelx"
FastAPI-Amis-Admin = "https://github.com/amisadmin/fastapi_amis_admin"

[project.optional-dependencies]
test = [
    "pytest>=7.1.3",
]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
version = { source = "file", path = "sqlmodelx/__init__.py" }
[tool.pdm.dev-dependencies]
dev = [
    "pre-commit>=2.20.0",
]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]

[tool.isort]
profile = "black"
atomic = true
filter_files = true

[tool.black]
line-length = 130
include = '\.pyi?$'

[tool.pdm.scripts]
lint = "pre-commit run --all-files"
test= "pytest"